11.apr (ws)
      - fix #10109: Crash on loading 1.0 score with BOTH lyrics AND parts
      - fix #8996:  Not possible to change va value beyond bar in multi-voice
      - fix #10142: 'nudged' UserAccidental lost when loading with trunk (patch from Miwarre)
      - fix #10148: cannot drag between staves
      - fix #10156: Deleting from the third note onward in a beam causes crash
      - fix #10157: MyImages Directory button inactive
      - fix #10158: no icons for MySoundFonts/MyImagesDirectory
      - fix #10175: patch from Miwarre
      - another fix for #7740
      (la)
      - fix #7944: Instrument limit (again)
8.apr (ws)
      - fix #10105: Apple+Shift+Click on note causes crash
      - allow quit in foto-mode (#10028)
      - fix #7740: drag and delete + undo causes crash
      - fix #10110: invisible text is not 'grayed'
      - fix #10117: rehearsal mark text missing
      - autoconnect feature for JACK midi input
7.apr (ws)
      - implemented JACK midi input
05.apr (la)
      - update for Jack 1.9.7 on windows, lower jack version should be ok
        on linux and mac
31.mar (ws)
      - applied patches from miwarre to enhance backward compatibility (#8403/#8405)
30.mar (ws)
      - fix: dont jump cursor back during playback
      - first code for chord articulation editor
28.mar (ws)
      - #8993: regression fix for beam layout
25.mar (ws)
      - new tempo text palette entries
      - new tempo text property: "follow text", tempotext is parsed to determine
        actual tempo.
      - better backward compatibility for copyright text (#9886)
      - fix #9901: changing sound in mixer doesn't update properly
      - fix #9916: ties don't copy
      - do not show nonexistant files in "open recent"
      - fix #9919: error on open/read musicxml was not handled
24.mar (ws)
      - add previous/next button to measure properties dialog
      - draw grips in edit mode always on top of all other elements
      - fix initialization of split-window action