@@ -1,4 +1,6 @@
 11.apr (ws)
+      - fix #10050: Closing a score with part opened causes crash
+      - fix #10062: Part with multiple instruments messes lyric position
       - fix #10109: Crash on loading 1.0 score with BOTH lyrics AND parts
       - fix #8996:  Not possible to change va value beyond bar in multi-voice
       - fix #10142: 'nudged' UserAccidental lost when loading with trunk (patch from Miwarre)
